fixed the border gap in catalog section

--- a/docs/scss/_catalog.scss
+++ b/docs/scss/_catalog.scss
@@ -19,8 +19,7 @@
     width: 30%;
   }
   &__img {
-    width: 220px;
-    height: 220px;
+    background-color: #fff;
     border-radius: 50%;
     border: 6px solid #fff;
   }
